-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 15
-
Component/s: client-libs
-
b13
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8247596 | 13.0.4 | Sergey Bylokhov | P4 | Resolved | Fixed | b05 |
| JDK-8243069 | 11.0.8-oracle | Sergey Bylokhov | P4 | Resolved | Fixed | b04 |
| JDK-8243966 | 11.0.8 | Sergey Bylokhov | P4 | Resolved | Fixed | b01 |
Initially, this bug was reported here:
https://mail.openjdk.java.net/pipermail/sound-dev/2020-January/000710.html
==========================
On 1/7/20 9:53 am, marcusl wrote:
> Hi there,
>
> I'm running a Java program under Windows 7 which just fetches the audio
> devices via the AudioSystem.getMixerInfo() and checks for a specific device.
> This device is a USB audio device. When the device gets plugged into the
> computer it takes about 3 sec until it is recognized by the AudioSystem. So
> no problem here. But if the device has been unplugged it takes about 30 sec
> until this situation is correctly reported by the AudioSystem. This happens
> with every USB-device.
>
> So, I just want to ask if this is because of the JVM<->Windows communication
> or if there is some timeout hidden throughout the audio system
> implementation. I can totally live with the 30 sec if there is no sane way
> to reduce this time. But I'm also interested in the "why".
>
> Thanks in advance
==========================
https://mail.openjdk.java.net/pipermail/sound-dev/2020-January/000710.html
==========================
On 1/7/20 9:53 am, marcusl wrote:
> Hi there,
>
> I'm running a Java program under Windows 7 which just fetches the audio
> devices via the AudioSystem.getMixerInfo() and checks for a specific device.
> This device is a USB audio device. When the device gets plugged into the
> computer it takes about 3 sec until it is recognized by the AudioSystem. So
> no problem here. But if the device has been unplugged it takes about 30 sec
> until this situation is correctly reported by the AudioSystem. This happens
> with every USB-device.
>
> So, I just want to ask if this is because of the JVM<->Windows communication
> or if there is some timeout hidden throughout the audio system
> implementation. I can totally live with the 30 sec if there is no sane way
> to reduce this time. But I'm also interested in the "why".
>
> Thanks in advance
==========================
- backported by
-
JDK-8243069 AudioSystem.getMixerInfo() takes about 30 sec to report a gone audio device
-
- Resolved
-
-
JDK-8243966 AudioSystem.getMixerInfo() takes about 30 sec to report a gone audio device
-
- Resolved
-
-
JDK-8247596 AudioSystem.getMixerInfo() takes about 30 sec to report a gone audio device
-
- Resolved
-
- links to