8238738: AudioSystem.getMixerInfo() takes about 30 sec to report a gone audio device

Reviewed-by: prr